feat: add answer variant suggestions
